--- a/wiki/ReleaseSchedule.wiki
+++ b/wiki/ReleaseSchedule.wiki
@@ -1,5 +1,4 @@
 #labels Featured
-
 = Release Schedule for Naga =
 
 
@@ -9,6 +8,6 @@
  
 First release to get something shipping.
 
-== 1.1 ==
+== 1.1 - ETA 2008-08-20 ==
 
 Full javadoc, packet readers extended to the planned the default set. Bug fixes.
