--- a/wiki/PacketReader.wiki
+++ b/wiki/PacketReader.wiki
@@ -12,9 +12,8 @@ Naga provides four different types of readers:
 It is possible to roll your own packet reader, but to do so takes a little bit of knowledge of ByteBuffers and how Naga internally uses the packet reader.
 
 
-= Details =
 
-== `RegularPacketReader` ==
+= `RegularPacketReader` =
 
 This reader assumes packets come with a header followed by the actual data.
 
@@ -40,8 +39,9 @@ It will then continue reading [0, 0, 1] as a packet with a content of 1 byte, an
 
 Anywhere where you want to use binary data. Just make sure that the header and endian-ness is identical on both sides.
 
+
  
-== `RawPacketReader` ==
+= `RawPacketReader` =
 
 This reader is attached to a `NIOSocket` by default. It reads as much as it can in a single pass, limited ony 
 by its internal buffer size and the amount of bytes available.
@@ -58,6 +58,40 @@ Encountering the bytes 0, 1, 2, 3, 4, 5 it will read [0, 1, 2] into a single pac
 
 If you want to make your own custom parsing and concatenation of data further down, this type of reader could be the way to go.
 
- 
 
-_Additional information forthcoming..._
+
+= `DelimitedPacketReader` =
+
+This reader will separate data given some byte delimiter. It can either use a maximum packet size (recommended in server applications) or an unbounded packet size.
+
+=== Example ===
+
+If we create a packet reader with the delimiter 1, we get the following behaviour.
+
+Encountering the bytes [0, 0, 3, 1, 1, 2, 3, 0, 0, 1, 8] it will start reading until it reaches the first 1, and pack the bytes found up until then into a packet [0, 0, 3] (not that the delimiter does not occur in the packet). It will then proceed to the next delimiter and send a zero length packet. The next packet is [2, 3, 0, 0] and the final 8 will remain in the internal buffer.
+
+
+=== Typical Use ===
+
+Text based protocols see `AsciiLineDelimitedPacketReader` and other simple protocols.
+
+
+
+= `AsciiLinePacketReader` and `ZeroDelimiterPacketReader` =
+
+These readers are subclasses of `DelimitedPacketReader` with delimiters \n (10) and 0 respectively. 
+
+= Creating your own reader =
+
+=== `getNextPacket()` ===
+
+This method will *always* be called whenever reading to the byte buffer yields 1 or more bytes. For this reason this method can safely be used to prepare the byte buffer for the next read.
+
+You are guaranteed that this method will be called repeatedly until a null is returned, so in general this method can consume data from the internal buffer one packet a time.
+
+Since only returning null will allow a new call to getBuffer(), it is ok to leave the byte buffer in an invalid state if the last return was a non-null.
+
+
+=== `getBuffer()` ===
+
+This method should return the next buffer you want to read data into. In general you should _never_ return a ByteBuffer that does not have any space left to add data since this is interpreted as there being no data left in the stream.
