--- a/wiki/ReleaseSchedule.wiki
+++ b/wiki/ReleaseSchedule.wiki
@@ -20,6 +20,6 @@ Single bug fix. Issue when using selectBlocking() and write() on different threa
 
 Default acceptor to allow all instead of deny all when creating a server socket. Expanded javadocs. Exposed wakeup() to interrupt selectBlocking().
 
-== 1.4 - TBA ==
+== 2.0 - TBA ==
 
-Feature requests.
+Simple EventMachine to work with Naga. Feature requests.
