--- a/wiki/Gotchas.wiki
+++ b/wiki/Gotchas.wiki
@@ -3,7 +3,7 @@
 
 === Callbacks and blocking actions ===
 
-Remember that all NIO callbacks are done on the NIO thread, which means *no* I/O can happen while the callback is running. This means you should never make length or blocking calls as a response. 
+Remember that all NIO callbacks are done on the NIO thread, which means *no* I/O can happen while the callback is running. This means you should never make lengthy or blocking calls as a response. 
 
 
 In particular watch out when implementing the following methods: 
