--- a/wiki/ReleaseSchedule.wiki
+++ b/wiki/ReleaseSchedule.wiki
@@ -23,3 +23,12 @@ Default acceptor to allow all instead of deny all when creating a server socket.
 == 2.0 - Done ==
 
 Simple EventMachine to work with Naga. Some improvement to javadoc.
+
+== 3.0 - In Progress ==
+
+Possible features: 
+* SSL support
+* Callback on packet written.
+* Simplified PacketReader / PacketWriter
+
+_3.0 Will not be 100% compatible with 1.x-2.x_
