--- a/wiki/ReleaseSchedule.wiki
+++ b/wiki/ReleaseSchedule.wiki
@@ -24,11 +24,20 @@ Default acceptor to allow all instead of deny all when creating a server socket.
 
 Simple EventMachine to work with Naga. Some improvement to javadoc.
 
+== 2.1 - Done == 
+
+Bug fixes.
+
 == 3.0 - In Progress ==
 
 Features: 
   * SSL support (Beta)
   * Callback on packet written.
   * Simplified PacketReader / PacketWriter
+  * Bug fixes
 
 _3.0 Will not be 100% compatible with 1.x-2.x_
+
+== 3.x - TBA ==
+
+Completed SSL support.
