Edited wiki page Gotchas through web user interface.

--- a/wiki/Gotchas.wiki
+++ b/wiki/Gotchas.wiki
@@ -15,3 +15,14 @@ In particular watch out when implementing the following methods:
 `ServerSocketObserver#newConnection(NIOSocket)`
 
 `ConnectionAcceptor#acceptConnection(InetSocketAddress)`
+
+=== Issues on Android ===
+
+Opening a socket on some versions of Android 2.2 will cause an exception due to a bug in that version (of Android).
+
+A workaround is to add the following:
+
+{{{
+java.lang.System.setProperty("java.net.preferIPv4Stack", "true");
+java.lang.System.setProperty("java.net.preferIPv6Addresses", "false");
+}}}
